src/test/deca/syntax/valid/twoinit.deca
{
    int a = 1;
    boolean a;
}