src/test/deca/syntax/invalid/created/float-error.deca
{
    float f = 1.00000e+30;

}